--- a/index.html
+++ b/index.html
@@ -27,43 +27,43 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="settings.html">
+                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="/settings.html">
                         <i class="fa-solid fa-gear fa-fw"></i>
                         <span class="h-mobile">Settings</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="profile.html">
+                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="/profile.html">
                         <i class="fa-regular fa-user fa-fw"></i>
                         <span class="h-mobile">Profile</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="projects.html">
+                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="/projects.html">
                         <i class="fa-solid fa-diagram-project fa-fw"></i>
                         <span class="h-mobile">Projects</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="courses.html">
+                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="/courses.html">
                         <i class="fa-solid fa-graduation-cap fa-fw"></i>
                         <span class="h-mobile">Courses</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-cente fs-14 c-black rad-6 p-10" href="friends.html">
+                    <a class="d-flex a-cente fs-14 c-black rad-6 p-10" href="/friends.html">
                         <i class="fa-regular fa-circle-user fa-fw"></i>
                         <span class="h-mobile">Friends</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-cente fs-14 c-black rad-6 p-10" href="files.html">
+                    <a class="d-flex a-cente fs-14 c-black rad-6 p-10" href="/files.html">
                         <i class="fa-regular fa-file fa-fw"></i>
                         <span class="h-mobile">Files</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="plans.html">
+                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="/plans.html">
                         <i class="fa-regular fa-credit-card fa-fw"></i>
                         <span class="h-mobile">Plans</span>
                     </a>
