--- a/settings.html
+++ b/settings.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>settings</title>
     <link rel="website icon" href="images/chart-column-solid.svg">
-    <link rel="stylesheet" href="css/framworks.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/framworks.css">
     <link rel="stylesheet" href="css/stylee.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -182,6 +182,77 @@
                     </div>
                 </div>
                 <!-- End Social Info -->
+                <!-- Start Widgets Control -->
+                <div class="widgets p-20 bg-wh br-10">
+                    <h2 class="mt-0 mb-10">Widgets Control</h2>
+                    <p class="mt-0 mb-20 c-grey fs-15">Show/Hide Widgets</p>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="one" checked>
+                        <label for="one">Quick Draft</label>
+                    </div>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="two" checked>
+                        <label for="two">Yearly Targets</label>
+                    </div>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="there">
+                        <label for="there">Tickets Statistics</label>
+                    </div>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="four" checked>
+                        <label for="four">Latest News</label>
+                    </div>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="five" checked>
+                        <label for="five">Latest Tasks</label>
+                    </div>
+                    <div class="control d-flex a-center mb-15">
+                        <input type="checkbox" id="six">
+                        <label for="six">Top Search Items</label>
+                    </div>
+                </div>
+                <!-- End Widgets Control -->
+                <!-- Start Backup Manager -->
+                <div class="backup p-20 bg-wh br-10">
+                    <h2 class="mt-0 mb-10">Widgets Control</h2>
+                    <p class="mt-0 mb-20 c-grey fs-15">Show/Hide Widgets</p>
+                    <div class="data mb-15 d-flex a-center ">
+                        <input type="radio" id="daily" name="time" checked>
+                        <label for="daily">Daily</label>
+                    </div>
+                    <div class="data mb-15 d-flex a-center ">
+                        <input type="radio" id="weekly" name="time" checked>
+                        <label for="weekly">Weekly</label>
+                    </div>
+                    <div class="data mb-15 d-flex a-center ">
+                        <input type="radio" id="monthly" name="time" checked>
+                        <label for="monthly">Monthly</label>
+                    </div>
+                    <div class="servers d-flex a-center t-center">
+                        <input type="radio" name="servers" id="server-one">
+                        <div class="server mb-15 w-full br-10">
+                            <label class="m-15 d-block" for="server-one">
+                                <i class="fa-solid fa-server d-block mb-15"></i>
+                                megaman
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-two">
+                        <div class="server mb-15 w-full br-10">
+                            <label class="m-15 d-block" for="server-two">
+                                <i class="fa-solid fa-server d-block mb-15"></i>
+                                Zero
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-threa">
+                        <div class="server mb-15 w-full br-10">
+                            <label class="m-15 d-block" for="server-threa">
+                                <i class="fa-solid fa-server d-block mb-15"></i>
+                                Sigma &#x3C; &#x3C; &#x3C; &#xD1;
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Backup Manager -->
             </div>
         </div>
         <script src="js.js"></script>
