--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="website icon" href="images/chart-column-solid.svg">
+    <link rel="website icon" href="images/chart-line.svg">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/framworks.css">
     <link rel="stylesheet" href="css/stylee.css">
