--- a/plans.html
+++ b/plans.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Files</title>
+    <title>Plans</title>
     <link rel="website icon" href="images/chart-column-solid.svg">
     <link rel="stylesheet" href="css/framworks.css">
     <link rel="stylesheet" href="css/stylee.css">
@@ -55,13 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a class="active d-flex a-cente fs-14 c-black rad-6 p-10" href="files.html">
+                    <a class="d-flex a-cente fs-14 c-black rad-6 p-10" href="files.html">
                         <i class="fa-regular fa-file fa-fw"></i>
                         <span class="h-mobile">Files</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex a-center fs-14 c-black rad-6 p-10" href="plans.html">
+                    <a class="active d-flex a-center fs-14 c-black rad-6 p-10" href="plans.html">
                         <i class="fa-regular fa-credit-card fa-fw"></i>
                         <span class="h-mobile">Plans</span>
                     </a>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <!-- End Head -->
-            <h1 class="p-rel">Files</h1>
+            <h1 class="p-rel">Plans</h1>
             <div class="wrapper d-grid gap-20">
                 
             </div>
