--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" active d-flex a-center fs-14 c-black rad-6 p-10" href="projects.html">
+                    <a class="active d-flex a-center fs-14 c-black rad-6 p-10" href="projects.html">
                         <i class="fa-solid fa-diagram-project fa-fw"></i>
                         <span class="h-mobile">Projects</span>
                     </a>
@@ -85,8 +85,203 @@
             </div>
             <!-- End Head -->
             <h1 class="p-rel">projects</h1>
-            <div class="wrapper d-grid gap-20">
-
+            <div class="projects d-grid gap-20 m-20">
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Basem Dashboard</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey">Basem Dashboard Project Design And Programming And Hosting</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                        <a href="#"><img src="images/team-04.png" alt=""></a>
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                        <span class="fs-13 br-6 bg-eee">Hosting</span>
+                        <span class="fs-13 br-6 bg-eee">Marketing</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-red" style="width: 75%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            3500
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">1/9/2023</span>
+                    <h4 class="m-0">Academy Portal</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey">Academy Portal Project Design And Programming</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-green" style="width: 60%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            2500
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">1/9/2023</span>
+                    <h4 class="m-0">Chatting Application
+                        Chatting Application Project Design</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey"> Chatting Application Project Design</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                        <a href="#"><img src="images/team-04.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-blue" style="width: 50%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            1500
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Ahmed Dashboard</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey"> Ahmed Dashboard Project Design And Programming And Hosting
+                    </p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                        <a href="#"><img src="images/team-04.png" alt=""></a>
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                        <span class="fs-13 br-6 bg-eee">Hosting</span>
+                        <span class="fs-13 br-6 bg-eee">Marketing</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-orang" style="width: 70%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            2800
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Ahmed Portal</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey">Ahmed Portal Project Design And Programming</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-green" style="width: 80%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            850
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Mohamed Dashboard</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey"> Mohamed Dashboard Project Design And Programming And Hosting</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                        <a href="#"><img src="images/team-04.png" alt=""></a>
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                        <span class="fs-13 br-6 bg-eee">Hosting</span>
+                        <span class="fs-13 br-6 bg-eee">Marketing</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-blue" style="width: 80%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            3800
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Mohamed Application</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey">Mohamed Application Project Design</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                        <span class="fs-13 br-6 bg-eee">Marketing</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-orang" style="width: 60%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            1500
+                        </div>
+                    </div>
+                </div>
+                <div class="project p-rel p-20 bg-wh br-6">
+                    <span class="data fs-13 c-grey">10/9/2023</span>
+                    <h4 class="m-0">Mohamed Portal</h4>
+                    <p class="mt-0 mb-10 fs-13 c-grey">Mohamed Portal Project Design And Programming</p>
+                    <div class="team">
+                        <a href="#"><img src="images/team-01.png" alt=""></a>
+                        <a href="#"><img src="images/team-02.png" alt=""></a>
+                        <a href="#"><img src="images/team-03.png" alt=""></a>
+                        <a href="#"><img src="images/team-04.png" alt=""></a>
+                        <a href="#"><img src="images/team-05.png" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="fs-13 br-6 bg-eee">Programming</span>
+                        <span class="fs-13 br-6 bg-eee">Design</span>
+                    </div>
+                    <div class="info d-fcb">
+                        <div class="progress bg-eee">
+                            <span class="bg-red" style="width: 70%;"></span>
+                        </div>
+                        <div class="fs-14 c-grey">
+                            <i class="fa-solid fa-dollar"></i>
+                            1500
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
